--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,11 @@ jobs:
       - name: Build project
         run: npm run build --if-present
 
+      - name: Check build output
+        run: ls -la .output/public  
+
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v2 
         with:
           path: .output/public
 
